<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
            android:id="@+id/quiz_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/quiz_image"
            android:scaleType="fitCenter" />


    <TextView
        android:id="@+id/quiz_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        style="@style/answersStyle3"
        android:text="@string/setContentDescription"
        android:textAlignment="center"
        android:textSize="24sp" />

    <ListView
        android:id="@+id/quiz_options"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1.5"
        android:choiceMode="singleChoice"
        android:clickable="true"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:dividerHeight="3dp"
        android:elevation="@dimen/cardview_default_elevation"
        android:focusable="true"
        android:footerDividersEnabled="true"
        android:theme="@style/Base.CardView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/play_rounded_button"
            android:onClick="submitButtonClicked"
            android:text="@string/submit"
            android:textColor="@color/colorAccent3"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/quiz_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/play_rounded_button"
            android:onClick="onNextPressed"
            android:src="@drawable/ic_navigate_next_black_24dp"
            android:text="@string/next"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorAccent3"
            android:visibility="visible" />
    </LinearLayout>


</LinearLayout>